--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "css-loader": "^6.7.1",
+    "gh-pages": "^4.0.0",
     "style-loader": "^3.3.1",
     "tsconfig-paths": "^4.0.0",
     "typescript-eslint-parser": "^22.0.0"
